RG-1056 fix vertical alignment for badge in Alert
Former-commit-id: d7dfb6b4056755b101440d26452ddc98eb829f79

--- a/components/alert/alert.scss
+++ b/components/alert/alert.scss
@@ -67,6 +67,10 @@
   white-space: normal;
 }
 
+.ring-alert__badge {
+  vertical-align: baseline;
+}
+
 .ring-alert__loader {
   top: 3px;
   margin-right: $ring-unit;
